tests/bad/invalid_bad_spread.mon
{
    ...*non_existent_anchor
}
